添加counter类型指标的支持，同时支持持续变化的指标在后台自动更新

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,9 +5,24 @@ metrics:
     labels:
       - a
       - b
+    type: gauge
   - name: metrics_01
     description: test metrics 01
     labels:
       - c
       - d
       - e
+    type: gauge
+  - name: metrics_02
+    description: test metrics 02
+    labels:
+      - f
+      - g
+    type: counter
+    instant: false
+  - name: metrics_03
+    description: test metrics 03
+    labels:
+      - f
+      - g
+    type: counter
